--- a/IGRP-Template/src/main/webapp/images/IGRP/IGRP2.3/plugins/virtualkeyboard/vkb.css
+++ b/IGRP-Template/src/main/webapp/images/IGRP/IGRP2.3/plugins/virtualkeyboard/vkb.css
@@ -1,22 +1,159 @@
-div.VKB_geral{width:100%;position:relative;}
-div.VKB_geral .VKB img, div.VKB_geral .VKB img{padding:0 0 0 0.6px;margin-top:-2px;border:none;}
-div.VKB_geral div.VKB_main{box-shadow: 0px 5px 15px -5px rgba(0, 0, 0, 0.506);background: white;right:2px; top:36px;position:absolute;display:none;z-index:20;font-size:10px;border: 1px solid #ccc;width:calc(100% - 4px);border-top:0; padding:5px 5px 0 5px;}
-.message #samterminaltoken{height: 30px; margin-bottom:5px; width:99.4%;}
-.VKB_input { border-right: 0!important }
-div.VKB_geral div.VKB_main div input.VKB_button, div.VKB_geral div.VKB_main div input.VKB_button{display:inline-block;width:9%;margin:0.5%;border:1px solid;height:24px;cursor:pointer;padding:1px;text-decoration:none;}
-div.VKB_main input.VKBOK_but, div.VKB_main input.VKBOK_but,
-div.VKB_main input.VKBLP_but, div.VKB_main input.VKBLP_but,
-div.VKB_main input.SHIFT_but, div.VKB_main input.SHIFT_but,
-div.VKB_main input.VKBCAN_but, div.VKB_main input.VKBCAN_but{margin:5px 0;cursor:pointer;font-size:10px;border:1px solid;}
-div.VKB_main input.VKBOK_but, div.VKB_main input.VKBOK_but{float:left;width:30px;}
-div.VKB_main input.VKBLP_but, div.VKB_main input.VKBLP_but,
-div.VKB_main input.VKBCAN_but, div.VKB_main input.VKBCAN_but{float:right;width:50px;}
-.message div.VKB_main input.VKBLP_but, .message div.VKB_main input.VKBCAN_but, .message div.VKB_main input.VKBOK_but{padding: 5px;}
-div.VKB_main input.VKBCAN_but, div.VKB_main input.VKBCAN_but{margin-left: 5px;}
-div.VKB_geral div.vkb_az div.VKB_num, div.VKB_div.VKB_main input.VKBCAN_butgeral div.vkb_num div.VKB_az{display:none;}
-div.VKB_geral div.VKB_main.vkb_num input.SHIFT_but, div.VKB_geral div.VKB_main.vkb_num input.SHIFT_but{display:none;}
-div.VKB_main input.SHIFT_but, div.VKB_main input.SHIFT_but{position:absolute;width:50px;height:24px;border:1px solid;right:6px;line-height:3px; bottom:24px;}
-.VKB_main.vkb_all .VKB_az{margin-bottom: 29px;}
-.message div.VKB_geral div.VKB_main{margin-left: -2px;}
-.input-group-addon.VKB_ctrl { cursor: pointer; }
-.hideItem {display: none;}
+div.vkb_geral {
+    width: 100%;
+    position: relative;
+    font-weight: 500;
+    color: #000;
+}
+
+div.vkb_geral.input-group.show_vbk_onloadd{
+    display: block;
+}
+
+div.vkb_geral .vkb img {
+    padding: 0 0 0 0.6px;
+    margin-top: -2px;
+    border: none;
+}
+
+div.vkb_geral div.vkb_main {
+    box-shadow: 0px 5px 15px -5px rgba(0, 0, 0, 0.506);
+    background: white;
+    right: 0;
+    top: 34px;
+    position: absolute;
+    display: none;
+    z-index: 20;
+    font-size: 10px;
+    border: 1px solid #ececec;
+    width: 100%;
+    border-top: 0;
+    padding: 5px 5px 0 5px;
+}
+
+div.vkb_geral.input-group.show_vbk_onloadd div.vkb_main{
+    position: relative;
+    display: block;
+    box-shadow:none;
+    top: 0;
+    z-index: 0;
+
+}
+
+div.vkb_geral.input-group.show_vbk_onloadd .input-group-addon {
+    padding: 6px 12px;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #555;
+    text-align: center;
+    background-color: #eee;
+    border: 1px solid #EAEAEA;
+    border-radius: 0;
+    width: 41px;
+    height: 34px;
+    position:absolute;
+    right: 0;
+    top: 0;
+    z-index: 12;
+}
+
+div.vkb_geral.input-group.show_vbk_onloadd .vkb_input{
+    padding-right: 45px;
+    float: none;
+}
+
+div.vkb_geral.input-group.show_vbk_onloadd .vkb_btn{
+    display: flex;
+}
+
+.message #samterminaltoken {
+    height: 30px;
+    margin-bottom: 5px;
+    width: 99.4%;
+}
+
+.vkb_input {
+    border-right: 0 !important
+}
+
+div.vkb_geral div.vkb_main div input.vkb_button {
+    display: inline-block;
+    width: 9%;
+    margin: 0.5%;
+    border: 1px solid #d6d6d6;
+    cursor: pointer;
+    padding: 1%;
+    text-decoration: none;
+    font-size: 14px;
+}
+
+div.vkb_main input.vkbOk_btn,
+div.vkb_main input.vkbLp_btn,
+div.vkb_main input.shift_btn,
+div.vkb_main input.vkbCan_btn {
+    margin: 5px 0;
+    cursor: pointer;
+    font-size: 12px;
+    border:1px solid #d6d6d6;
+    min-width: 12%;
+    min-height: 15%;
+}
+
+div.vkb_main input.vkbOk_btn {
+    float: right;
+}
+
+div.vkb_geral.input-group.show_vbk_onloadd input.vkbOk_btn{
+    position: absolute;
+    right: 6px;
+}
+
+div.vkb_main input.vkbLp_btn,
+div.vkb_main input.vkbCan_btn {
+    float: left;
+}
+
+.message div.vkb_main input.vkbLp_btn,
+.message div.vkb_main input.vkbCan_btn,
+.message div.vkb_main input.vkbOk_btn {
+    padding: 5px;
+}
+
+div.vkb_main input.vkbCan_btn {
+    margin-right: 5px;
+}
+
+div.vkb_geral div.vkb_az div.vkb_num,
+div.vkb_div.vkb_main input.vkbCan_btngeral div.vkb_num div.vkb_az {
+    display: none;
+}
+
+div.vkb_geral div.vkb_main.vkb_num input.shift_btn {
+    display: none;
+}
+
+div.vkb_main input.shift_btn {
+    position: absolute;
+    min-width: 12%;
+    min-height: 15%;
+    border: 1px solid #d6d6d6;
+    right: 6px;
+    line-height: 3px;
+    bottom: 35px;
+}
+
+.vkb_main.vkb_all .vkb_az {
+    margin-bottom: 29px;
+}
+
+.message div.vkb_geral div.vkb_main {
+    margin-left: -2px;
+}
+
+.input-group-addon.vkb_ctrl {
+    cursor: pointer;
+}
+
+.hideItem {
+    display: none;
+}
